Fixed overlapping elements

--- a/UWEflix_Resit/UWEflix_Website/static/UWEflix_Website/site.css
+++ b/UWEflix_Resit/UWEflix_Website/static/UWEflix_Website/site.css
@@ -236,7 +236,7 @@ a {
   
   .club {
     float: left;
-    width: 750px;
+    width: 650px;
     display: flex;
     margin: auto;
     border-radius: 10px;
@@ -259,7 +259,7 @@ a {
 
   .balance{
     float: right;
-    width: 750px;
+    width: 650px;
     display: flex;
     margin: auto;
     border-radius: 10px;
